--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "flatqueue": "^2.0.3",
     "html-webpack-plugin": "^5.6.3",
     "konva": "^9.3.16",
     "yaml": "^2.6.0"
