--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,11 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "flatqueue": "^2.0.3",
+    "heap": "^0.2.7",
+    "heap-js": "^2.5.0",
     "html-webpack-plugin": "^5.6.3",
     "konva": "^9.3.16",
+    "tinyqueue": "^3.0.0",
     "yaml": "^2.6.0"
   }
 }
