--- a/frontend/test/test3.yaml
+++ b/frontend/test/test3.yaml
@@ -1,23 +1,37 @@
 data:
-  layout: column
+  layout: inline
   objects:
-    container1:
+    group1:
+      type: group
       layout: column
       objects:
         ingress1:
           type: box
           name: ingress1
+        service1:
+          type: box
+          name: service1
+        deployment1:
+          type: box
+          name: deployment1
+    group2:
+      type: group
+      layout: column
+      objects:
         ingress2:
           type: box
           name: ingress2
-    service1:
-      type: box
-      name: service1
-    deployment1:
-      type: box
-      name: depl1
+        service2:
+          type: box
+          name: service2
+        deployment2:
+          type: box
+          name: deployment2
 
 relations:
-  ingress1-service1:
+  ingress1-service2:
     from: ingress1
-    to: service1
+    to: service2
+  service2-deployment1:
+    from: service2
+    to: deployment1
